# md-prune-image

./: Cargo.toml  Justfile
src/: actions.rs  cli.rs  error.rs  lib.rs  main.rs  parser.rs  scanner.rs  utils.rs
